--- a/index.html
+++ b/index.html
@@ -61,27 +61,15 @@
 
                 <h2>Misión</h2> 
 
-                <p>Nuestra misión es mejorar la calidad
-                     de vida de las personas con 
-                     discapacidad visual a través del 
-                     diseño y comercialización de bastones
-                      tecnológicos innovadores, 
-                      accesibles y de alta calidad, que 
-                      promuevan su autonomía, seguridad 
-                      e integración plena en la sociedad.</p> 
+                <p>ViSense tiene como objetivo mejorar la calidad de vida de las personas
+                  con discapacidad visual  y promover su incluisión en la sociedad 
+                  mediante el diseño y venta de bastones tecnológicos capaces de detectar
+                  obstaculos qué se presenten en su camino.</p> 
                 <h2>Visión</h2> 
 
-                <p>Convertirnos en una empresa líder a 
-                     nivel nacional en el desarrollo de 
-                     soluciones tecnológicas para personas
-                     con discapacidad visual, promoviendo
-                      su movilidad y autonomía mediante 
-                      bastones inteligentes de alta 
-                      calidad, y ampliando nuestra 
-                      presencia en las principales 
-                      ciudades del país para garantizar 
-                      un acceso equitativo, inclusivo y 
-                      sostenible a nuestra tecnología.</p> 
+                <p>Como empresa proyectamos para el año 2030, expandirnos a nivel 
+                  nacional comenzando por establecer 5 sedes en las siguientes 
+                  ciudades principales :Bogotá, Medellín, Barranquilla, Cali, Cartagena.</p> 
 
 
 <section class="info-container">
@@ -115,4 +103,5 @@
     
   </div>
 </section>
+
 </html>
