--- a/nuestro producto.html
+++ b/nuestro producto.html
@@ -34,23 +34,10 @@
     <div class="container">
 
   <h1>Haz tu pedido</h1>
-  <form target="_blank" action="https://visense.25@gmail.com" method="POST">
-    <div class="form-group">
-      <div class="form-row">
-        <div class="col">
-          <input type="text" name="name" class="form-control" placeholder="Nombre" required>
-        </div>
-        <div class="col">
-          <input type="email" name="email" class="form-control" placeholder="Correo Electronico" required>
-        </div>
-      </div>
-    </div>
-    <div class="form-group">
-      <textarea placeholder="Escribe aquí tu mensaje" class="form-control" name="message" rows="10" required></textarea>
-    </div>
-    <button type="submit" class="btn btn-lg btn-dark btn-block">Submit Form</button>
-  </form>
-</div>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  
+      <p><a href="https://wa.me/573169992631"><i class="fab fa-whatsapp"></i> Whatsapp</a></p>
 
 </html>
+
 
