--- a/nuestro producto.html
+++ b/nuestro producto.html
@@ -28,16 +28,17 @@
     <div class="producto-card">
       <img src="VisenseTotal.png" alt="Producto Visense">
       <h3>Bastón Inteligente ViSense</h3>
-      <p>Bastón inteligente para personas invidentes. Seguro, moderno y confiable.</p>
+      <p>Precio.</p>
       <span class="precio">$555.000</span>
     </div> 
     <div class="container">
 
   <h1>Haz tu pedido</h1>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  
+      <p> Escribenos a través de Whatsapp:<p>
       <p><a href="https://wa.me/573169992631"><i class="fab fa-whatsapp"></i> Whatsapp</a></p>
 
 </html>
+
 
 
