--- a/nosotros.html
+++ b/nosotros.html
@@ -11,7 +11,7 @@
   <header class="navbar">
     <div class="logo">
       <img src="Visense Logo.png" alt="Logo Visense">
-      <span>Visense</span>
+      <span>ViSense</span>
     </div>
     <nav>
       <a href="index.html">Inicio</a>
@@ -79,4 +79,5 @@
   <h2>.</h2>
    <p>Así se ve Visense: Conecta innovación y tecnología con tu camino.</p>
   </div>
+
 </video>
