--- a/nosotros.html
+++ b/nosotros.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Visense</title>
+  <title>ViSense</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -81,3 +81,4 @@
   </div>
 
 </video>
+
