--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Visense</title>
+  <title>ViSense</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -105,3 +105,4 @@
 </section>
 
 </html>
+
