--- a/nuestro producto.html
+++ b/nuestro producto.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Visense</title>
+  <title>ViSense</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
   <header class="navbar">
     <div class="logo">
       <img src="Visense Logo.png" alt="Logo Visense">
-      <span>Visense</span>
+      <span>ViSense</span>
     </div>
     <nav>
       <a href="index.html">Inicio</a>
@@ -40,6 +40,7 @@
       <p><a href="https://wa.me/573169992631"><i class="fab fa-whatsapp"></i> Whatsapp</a></p>
 
 </html>
+
 
 
 
