--- a/nosotros.html
+++ b/nosotros.html
@@ -63,7 +63,7 @@
 
                 <h2>¿Cual es el siguiente paso?</h2> 
 
-                 <p>El siguiente paso para Visense consiste en ampliar su alcance
+                 <p>El siguiente paso para ViSense consiste en ampliar su alcance
                    y generar un mayor impacto social mediante un proceso de expansión
                    a nivel nacional, consolidando presencia en las principales ciudades
                    del país. De manera paralela, se proyecta la diversificación del
@@ -81,4 +81,5 @@
   </div>
 
 </video>
+
 
