--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
   
   <main>
     <section id="inicio">
-      <h1>ViSense</h1>
+      <h1>
+        
+        ViSense</h1>
       <p>"Cuida tu camino"</p>
     </section>
 
@@ -105,4 +107,5 @@
 </section>
 
 </html>
+
 
