--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
                 <h2>¿Quiénes somos?</h2> 
 
-                <p>Visense es una empresa colombiana creada
+                <p>ViSense es una empresa colombiana creada
                      para cambiar la vida de las personas 
                      con discapacidad visual, 
                      brindándoles una solución que 
@@ -107,5 +107,6 @@
 </section>
 
 </html>
+
 
 
