--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav>
       <a href="index.html">Inicio</a>
       <a href="nosotros.html">Nosotros</a>
-      <a href="nuestro producto.html">Producto</a>
+      <a href="nuestro producto.html">Nuestro Producto</a>
     </nav>
   </header>
 
@@ -107,6 +107,7 @@
 </section>
 
 </html>
+
 
 
 
