--- a/nosotros.html
+++ b/nosotros.html
@@ -38,10 +38,8 @@
 
                  <p>La idea de ViSense surgio al ver que en colombia
                    hay muchas personas con discapacidad visual, por 
-                   lo tanto como fundadores de de esta empresa  queríamos
-                    abordar esta problemática. En Bogotá y en Soacha hay
-                    personas que no tienen los suficientes recursos 
-                    económicos para pagar un baston tan costoso. En cuanto 
+                   lo tanto como fundadores de esta empresa buscamos
+                    abordar esta problemática. En cuanto 
                     nos dimos cuenta de esta situación, empezamos a investigar
                     maneras en la cuales podíamos fortalecer la utilidad 
                     de un bastón común y corriente y llegamos a una conclusión 
@@ -58,7 +56,7 @@
                    y la inclusión social, generando un impacto positivo en la forma 
                    que esta comunidad percibe, se desplaza y participa activamente en 
                    su entorno. Creemos con firmeza que la tecnología puede ser una 
-                   herramienta esencial de transfomracion y que, atraves de ella 
+                   herramienta esencial de transfomracion y que, a través de ella 
                    podemos derribar barreras </p>
 
                 <h2>¿Cual es el siguiente paso?</h2> 
@@ -75,11 +73,12 @@
 <section class="video-section">
   <div class="video-container">
   <video autoplay muted loop playsinline width="600">
-  <source src="VisenseVideo.mp4" type="video/mp4">
+  <source src="Video Final Visense" type="video/mp4">
   <h2>.</h2>
    <p>Así se ve Visense: Conecta innovación y tecnología con tu camino.</p>
   </div>
 
 </video>
+
 
 
