--- a/nosotros.html
+++ b/nosotros.html
@@ -74,11 +74,14 @@
   <div class="video-container">
   <video autoplay muted loop playsinline width="600">
   <source src="video-final-visense_Umds2GTg.mp4" type="video/mp4">
+    </video>
   <h2>.</h2>
    <p>Así se ve Visense: Conecta innovación y tecnología con tu camino.</p>
   </div>
+</section>
+            </body>
+            </html>
 
-</video>
 
 
 
