--- a/nosotros.html
+++ b/nosotros.html
@@ -72,15 +72,15 @@
 
 <section class="video-section">
   <div class="video-container">
-  <video autoplay muted loop playsinline width="600">
+  <video autoplay muted loop playsinline width="300">
   <source src="video-final-visense_Umds2GTg.mp4" type="video/mp4">
     </video>
-  <h2>.</h2>
-   <p>Así se ve Visense: Conecta innovación y tecnología con tu camino.</p>
+  <h2>Así se ve Visense: Conecta innovación y tecnología con tu camino.</h2>
   </div>
 </section>
             </body>
             </html>
+
 
 
 
