--- a/nuestro producto.html
+++ b/nuestro producto.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>ViSense</title>
   <link rel="stylesheet" href="style.css">
+   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -40,6 +41,7 @@
       <p><a href="https://wa.me/573169992631"><i class="fab fa-whatsapp"></i> Whatsapp</a></p>
 
 </html>
+
 
 
 
