--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </h2>
 
 
-                <h1>SOBRE NOSOTROS</h1> 
+                <h1>Sobre Nostros</h1> 
 
                 <h2>¿Quiénes somos?</h2> 
 
@@ -108,6 +108,7 @@
 </section>
 
 </html>
+
 
 
 
