--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <header class="header-txt"></header>
         <div class="title"></div>
             <body>
-                <h1>ViSense: Una nueva alternativa</h1> 
+                <h2>ViSense: Una nueva alternativa</h2> 
                 <h2>ViSense es un bastón inteligente creado para 
                     las personas con discapacidad visual.
 
@@ -48,7 +48,7 @@
                 </h2>
 
 
-                <h1>Sobre Nostros</h1> 
+                <h2>Sobre Nosotros</h2> 
 
                 <h2>¿Quiénes somos?</h2> 
 
@@ -108,6 +108,7 @@
 </section>
 
 </html>
+
 
 
 
