--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                 <h2>¿Quiénes somos?</h2> 
 
-                <p>ViSense es una empresa colombiana creada
+                <h2>ViSense es una empresa colombiana creada
                      para cambiar la vida de las personas 
                      con discapacidad visual, 
                      brindándoles una solución que 
@@ -62,19 +62,19 @@
                      día a día con ayuda de la tecnología. 
                      Buscamos brindar nuevas opciones a esta 
                      comunidad combinando la seguridad y el diseño, 
-                     para mejorar su momovilidad y aumentar su autonomía. </p>
+                     para mejorar su momovilidad y aumentar su autonomía. </h2>
 
                 <h2>Misión</h2> 
 
-                <p>ViSense tiene como objetivo mejorar la calidad de vida de las personas
+                <h2>ViSense tiene como objetivo mejorar la calidad de vida de las personas
                   con discapacidad visual  y promover su incluisión en la sociedad 
                   mediante el diseño y venta de bastones tecnológicos capaces de detectar
-                  obstaculos qué se presenten en su camino.</p> 
+                  obstaculos qué se presenten en su camino.</h2> 
                 <h2>Visión</h2> 
 
-                <p>Como empresa proyectamos para el año 2030, expandirnos a nivel 
+                <h2>Como empresa proyectamos para el año 2030, expandirnos a nivel 
                   nacional comenzando por establecer 5 sedes en las siguientes 
-                  ciudades principales: Bogotá, Medellín, Barranquilla, Cali, Cartagena.</p> 
+                  ciudades principales: Bogotá, Medellín, Barranquilla, Cali, Cartagena.</h2> 
 
 
 <section class="info-container">
@@ -100,15 +100,15 @@
     <h2>Contacto</h2>
     
       <li>Puedes seguirnos en</li>
-      <p><a href="https://www.instagram.com/_somosvisense_"><i class="fab fa-instagram"></i> Instagram</a></p>
+      <h2><a href="https://www.instagram.com/_somosvisense_"><i class="fab fa-instagram"></i> Instagram</a></h2>
       <li>Escribirnos en</li>
-      <p><a href="https://wa.me/573169992631"><i class="fab fa-whatsapp"></i> Whatsapp</a></p>
+      <h2><a href="https://wa.me/573169992631"><i class="fab fa-whatsapp"></i> Whatsapp</a></h2>
       <li>O vernos en</li>
-      <p><a href="https://www.tiktok.com/@_somosvisense_?_t=ZS-8yKyPrCffoy&_r=1"><i class="fab fa-tiktok"></i> TikTok</a></p>
+      <h2><a href="https://www.tiktok.com/@_somosvisense_?_t=ZS-8yKyPrCffoy&_r=1"><i class="fab fa-tiktok"></i> TikTok</a></h2>
     
   </div>
 </section>
-              </p> 
+      </p> 
   <script>
 function leerTexto() {
   const texto = document.getElementById("texto").innerText;
@@ -124,6 +124,7 @@ function leerTexto() {
 </script>            
 </body>
 </html>
+
 
 
 
