--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
     <header class="header-txt"></header>
         <div class="title"></div>
             <body>
+              
               <button onclick="leerTexto()">🔊 Escuchar</button>
-<p id="texto">
-
-                <h2>ViSense: Una nueva alternativa</h2> 
-                <h2>ViSense es un bastón inteligente creado para 
+<h1 id="texto">
+<h2>ViSense: Una nueva alternativa</h2> 
+<h2>ViSense es un bastón inteligente creado para 
                     las personas con discapacidad visual.
 
                     Trabaja utilizando sensores de vibración y 
@@ -50,11 +50,11 @@
                 </h2>
 
 
-                <h2>Sobre Nosotros</h2> 
+<h2>Sobre Nosotros</h2> 
 
-                <h2>¿Quiénes somos?</h2> 
+<h2>¿Quiénes somos?</h2> 
 
-                <h2>ViSense es una empresa colombiana creada
+<h2>ViSense es una empresa colombiana creada
                      para cambiar la vida de las personas 
                      con discapacidad visual, 
                      brindándoles una solución que 
@@ -64,19 +64,20 @@
                      comunidad combinando la seguridad y el diseño, 
                      para mejorar su momovilidad y aumentar su autonomía. </h2>
 
-                <h2>Misión</h2> 
+ <h2>Misión</h2> 
 
-                <h2>ViSense tiene como objetivo mejorar la calidad de vida de las personas
+<h2>ViSense tiene como objetivo mejorar la calidad de vida de las personas
                   con discapacidad visual  y promover su incluisión en la sociedad 
                   mediante el diseño y venta de bastones tecnológicos capaces de detectar
                   obstaculos qué se presenten en su camino.</h2> 
-                <h2>Visión</h2> 
+<h2>Visión</h2> 
 
-                <h2>Como empresa proyectamos para el año 2030, expandirnos a nivel 
+<h2>Como empresa proyectamos para el año 2030, expandirnos a nivel 
                   nacional comenzando por establecer 5 sedes en las siguientes 
                   ciudades principales: Bogotá, Medellín, Barranquilla, Cali, Cartagena.</h2> 
-</p>
+</h1>
 
+              
 <section class="info-container">
   <!-- Valores -->
   <div class="valores">
@@ -124,6 +125,7 @@ function leerTexto() {
 </script>            
 </body>
 </html>
+
 
 
 
