--- a/index.html
+++ b/index.html
@@ -37,45 +37,42 @@
         <div class="title"></div>
             <body>
               
-              <button onclick="leerTexto()">🔊 Escuchar</button>
-<h2 id="texto">
-<h2>ViSense: Una nueva alternativa</h2> 
-<h2>ViSense es un bastón inteligente creado para 
-                    las personas con discapacidad visual.
+              <section class="sobre-visense" id="sobre-visense">
+  <h2>ViSense: Una nueva alternativa</h2>
+  <p>
+    ViSense es un bastón inteligente creado para las personas con discapacidad visual.
+    Trabaja utilizando sensores de vibración y de detección de objetos que ayudan a otorgar
+    autonomía, seguridad y confianza al usuario, facilitando su movilidad y mejorando su calidad de vida.
+  </p>
 
-                    Trabaja utilizando sensores de vibración y 
-                    de detección de objetos que ayudan a otorgar
-                    autonomía, seguridad y confianza al usuario 
-                    facilitando su movilidad y mejorando su calidad de vida.
-                </h2>
+  <h2>Sobre Nosotros</h2>
+  
+  <h3>¿Quiénes somos?</h3>
+  <p>
+    ViSense es una empresa colombiana creada para cambiar la vida de las personas con discapacidad visual,
+    brindándoles una solución que revoluciona un elemento esencial de su día a día con ayuda de la tecnología.
+    Buscamos brindar nuevas opciones a esta comunidad combinando la seguridad y el diseño,
+    para mejorar su movilidad y aumentar su autonomía.
+  </p>
 
+  <h3>Misión</h3>
+  <p>
+    ViSense tiene como objetivo mejorar la calidad de vida de las personas con discapacidad visual
+    y promover su inclusión en la sociedad mediante el diseño y venta de bastones tecnológicos capaces
+    de detectar obstáculos que se presenten en su camino.
+  </p>
 
-<h2>Sobre Nosotros</h2> 
+  <h3>Visión</h3>
+  <p>
+    Como empresa proyectamos para el año 2030 expandirnos a nivel nacional,
+    comenzando por establecer 5 sedes en las siguientes ciudades principales:
+    Bogotá, Medellín, Barranquilla, Cali y Cartagena.
+  </p>
 
-<h2>¿Quiénes somos?</h2> 
+  <!-- Botón para activar la lectura -->
+  <button id="leerBtn">🔊 Escuchar</button>
+</section>
 
-<h2>ViSense es una empresa colombiana creada
-                     para cambiar la vida de las personas 
-                     con discapacidad visual, 
-                     brindándoles una solución que 
-                     revoluciona un elemento esencial de su 
-                     día a día con ayuda de la tecnología. 
-                     Buscamos brindar nuevas opciones a esta 
-                     comunidad combinando la seguridad y el diseño, 
-                     para mejorar su momovilidad y aumentar su autonomía. </h2>
-
- <h2>Misión</h2> 
-
-<h2>ViSense tiene como objetivo mejorar la calidad de vida de las personas
-                  con discapacidad visual  y promover su incluisión en la sociedad 
-                  mediante el diseño y venta de bastones tecnológicos capaces de detectar
-                  obstaculos qué se presenten en su camino.</h2> 
-<h2>Visión</h2> 
-
-<h2>Como empresa proyectamos para el año 2030, expandirnos a nivel 
-                  nacional comenzando por establecer 5 sedes en las siguientes 
-                  ciudades principales: Bogotá, Medellín, Barranquilla, Cali, Cartagena.</h2> 
-</h2>
 
               
 <section class="info-container">
@@ -125,6 +122,7 @@ function leerTexto() {
 </script>            
 </body>
 </html>
+
 
 
 
