--- a/nosotros.html
+++ b/nosotros.html
@@ -58,7 +58,7 @@
                    y la inclusión social, generando un impacto positivo en la forma 
                    que esta comunidad percibe, se desplaza y participa activamente en 
                    su entorno. Creemos con firmeza que la tecnología puede ser una 
-                   herramienta esencial de transfomracion y que, a través de ella 
+                   herramienta esencial de transformacion y que, a través de ella 
                    podemos derribar barreras </p>
 
                 <h2>¿Cual es el siguiente paso?</h2> 
@@ -103,6 +103,7 @@
 </section>
             </body>
             </html>
+
 
 
 
