--- a/nuestro producto.html
+++ b/nuestro producto.html
@@ -22,7 +22,7 @@
   </header>
 
   <section class="productos">
-  <p>"Cuida Tu Camino</p>
+  <h2>"Cuida Tu Camino</h2>
   <div class="productos-grid">
 
    
@@ -45,6 +45,7 @@
 
 
 </html>
+
 
 
 
