--- a/nosotros.html
+++ b/nosotros.html
@@ -92,6 +92,13 @@
   });
 </script>
 
+<button onclick="detenerLectura()">⏹️ Detener</button>
+
+<script>
+function detenerLectura() {
+  window.speechSynthesis.cancel();
+}
+</script>
 
 <section class="video-section">
   <div class="video-container">
@@ -103,6 +110,7 @@
 </section>
             </body>
             </html>
+
 
 
 
