--- a/nuestro producto.html
+++ b/nuestro producto.html
@@ -30,17 +30,17 @@
       <p>Precio:</p>
       <span class="precio">$555.000</span>
     </div> 
-    <div class="container">
   </section>
 
-
+ <div class="container">
   <h1>Haz tu pedido</h1>
        <p> Escribenos a través de Whatsapp:</p>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
      
       <p><a href="https://wa.me/573169992631"><i class="fab fa-whatsapp"></i> Whatsapp</a></p>
-
+ </div>
 </html>
+
 
 
 
