--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <p>
     ViSense tiene como objetivo mejorar la calidad de vida de las personas con discapacidad visual
     y promover su inclusión en la sociedad mediante el diseño y venta de bastones tecnológicos capaces
-    de detectar obstáculos que se presenten en su camino.
+    de detectar obstáculos aumentando su autonomía.
   </p>
 
   <h3>Visión</h3>
@@ -67,6 +67,7 @@
     Como empresa proyectamos para el año 2030 expandirnos a nivel nacional,
     comenzando por establecer 5 sedes en las siguientes ciudades principales:
     Bogotá, Medellín, Barranquilla, Cali y Cartagena.
+    Esto para lograr obtener una mayor área de reconocimiento y visibilidad.
   </p>
 
    </section>
@@ -147,6 +148,7 @@ function leerTexto() {
 </script>            
 </body>
 </html>
+
 
 
 
