--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     <header class="header-txt"></header>
         <div class="title"></div>
             <body>
-              
+
+               <div class="card">
               <section class="sobre-visense" id="sobre-visense">
   <h3>ViSense: Una nueva alternativa</h3>
   <p>
@@ -69,9 +70,10 @@
     Bogotá, Medellín, Barranquilla, Cali y Cartagena.
     Esto para lograr obtener una mayor área de reconocimiento y visibilidad.
   </p>
-
-   </section>
-  <!-- Botón para activar la lectura -->
+  </section>
+  </div>
+  
+                 <!-- Botón para activar la lectura -->
   <button id="leerBtn">🔊 Escuchar</button>
 
 <script>
@@ -148,6 +150,7 @@ function leerTexto() {
 </script>            
 </body>
 </html>
+
 
 
 
