--- a/nosotros.html
+++ b/nosotros.html
@@ -24,7 +24,7 @@
 
 <main>
     <section id="inicio">
-      <h1>Visense</h1>
+      <h1>ViSense</h1>
       <p>"Cuida tu camino"</p>
     </section>
 
@@ -36,7 +36,7 @@
         <div class="title"></div>
             <body>  
               <section class="sobre-visense" id="sobre-visense">
-              <h3>¿Como se creó Visense?</h3> 
+              <h3>¿Como se creó ViSense?</h3> 
 
                  <p>La idea de ViSense surgio al ver que en colombia
                    hay muchas personas con discapacidad visual, por 
@@ -110,6 +110,7 @@ function detenerLectura() {
 </section>
 </body>
  </html>
+
 
 
 
