--- a/nosotros.html
+++ b/nosotros.html
@@ -36,7 +36,7 @@
               <section class="sobre-visense" id="sobre-visense">
               <h3>¿Como se creó ViSense?</h3> 
 
-                 <p>La idea de ViSense surgio al ver que en colombia
+                 <p>La idea de ViSense surgio al ver que en Colombia
                    hay muchas personas con discapacidad visual, por 
                    lo tanto como fundadores de esta empresa buscamos
                     abordar esta problemática. En cuanto 
@@ -110,6 +110,7 @@ function detenerLectura() {
 </section>
 </body>
  </html>
+
 
 
 
