--- a/nosotros.html
+++ b/nosotros.html
@@ -71,7 +71,10 @@
                    calidad de vida de la comunidad con discapacidad visual. </p>   
                </div>
               </section>
+
+              <div class="voice-controls">
               <button id="leerBtn">🔊 Escuchar</button>
+              </div>
               
               <script>
   document.getElementById("leerBtn").addEventListener("click", function() {
@@ -92,8 +95,10 @@
   });
 </script>
 
+              <div class="voice-controls">
 <button onclick="detenerLectura()">⏹️ Detener</button>
-
+              </div>
+                
 <script>
 function detenerLectura() {
   window.speechSynthesis.cancel();
@@ -110,6 +115,7 @@ function detenerLectura() {
 </section>
 </body>
  </html>
+
 
 
 
